# pokedex

./: pyproject.toml
pokedex/: __init__.py  retrieve.py
pokedex/client/: __init__.py  api.py
pokedex/models/: __init__.py  basics.py  berries.py  commons.py  contests.py  encounters.py  evolution.py  games.py  items.py  locations.py  machines.py  moves.py  pokemon.py  resource.py
