[tool.poetry]
name = "pokedex"
version = "0.1.0"
description = ""
authors = ["Felix Soubelet <felix.soubelet@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
loguru = "^0.5.1"
requests = "^2.24.0"
pydantic = "^1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
