[tool.poetry]
name = "pokedex"
version = "0.1.0"
description = ""
authors = ["Felix Soubelet <felix.soubelet@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
loguru = "^0.5.1"
requests = "^2.24.0"
pydantic = "^1.6.1"
pysimplegui = "^4.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
